[package]
name = "mdcat"
description = "cat for markdown: Show markdown documents in terminals"
readme = "README.md"
homepage = "https://github.com/swsnr/mdcat"
repository = "https://github.com/swsnr/mdcat"
documentation = "https://docs.rs/mdcat"
keywords = ["markdown", "less", "cat"]
version = "1.1.1"
categories = ["command-line-utilities", "text-processing"]
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.67"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
# For static builds use rustls to avoid cross-building openssl, but use the
# native certificate roots for maximum compatibility
static = ["reqwest/rustls-tls-native-roots"]

[dependencies]
anstyle = { version = "0.3.5", default-features = false }
anyhow = { version = "1.0.70", default-features = false, features = ["std"] }
base64 = { version = "0.21.0", default-features = false }
clap = { version = "4.2.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
concolor-query = { version = "0.3.3", default-features = false }
gethostname = "0.4.1"
image = "0.24.6"
mime = { version = "0.3.17", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
once_cell = { version = "1.17.1", default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false, features = ['simd'] }
reqwest = { version = "0.11.16", default-features = false, features = ["gzip", "brotli", "blocking"]}
resvg = { version = "0.31.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
shell-words = { version = "1.1.0", default-features = false, features = ["std"] }
syntect = { version = "5.0.0", default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes"] }
system_proxy = { version = "0.3.2", default-features = false }
textwrap = { version = "0.16.0", default-features = false, features = ["unicode-linebreak", "unicode-width"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "std", "fmt", "ansi"] }
url = "2.3.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.141"

[target.'cfg(windows)'.dependencies]
terminal_size = "0.2.6"

[dev-dependencies]
glob = "0.3.1"
hyper = { version="0.14.25", default-features = false, features = ["server", "http1", "runtime"] }
pretty_assertions = "1.3.0"
tokio = { version = "1.27", default-features = false, features = ["time"] }

[build-dependencies]
# To generate completions during build
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.0"
syntect = { version = "5.0.0", default-features = false, features = ["plist-load", "dump-create"] }

[profile.release]
# Enable LTO for release builds; makes the binary a lot smaller
lto = true

[package.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "Release {{version}}"
tag-prefix = "mdcat-"
tag-name = "{{prefix}}{{version}}"
tag-message = "mdcat {{version}}"
pre-release-replacements = [
    # Update version and release date in manpage
    { file="mdcat.1.adoc", search="(?m)^:revnumber:.*$", replace = ":revnumber: {{version}}" },
    { file="mdcat.1.adoc", search="(?m)^:revdate:.*$", replace = ":revdate: {{date}}" },
    # Update the changelog
    { file="CHANGELOG.md", search="## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file="CHANGELOG.md", search="HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file="CHANGELOG.md", search="\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/mdcat/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
