[package]
name = "pulldown-cmark-mdcat"
description = "Render pulldown-cmark events to TTY"
readme = "README.md"
documentation = "https://docs.rs/pulldown-cmark-mdcat"
keywords = ["markdown", "less", "cat", "cmark"]
homepage.workspace = true
repository.workspace = true
version.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["svg", "regex-fancy", "image-processing"]
svg = ["dep:resvg"]
image-processing = ["dep:image"]
regex-fancy = ["syntect/regex-fancy"]
onig = ["syntect/regex-onig"]

[dependencies]
base64 = { version = "0.21.0", default-features = false, features = ["std"] }
anstyle = { version = "1.0.0", default-features = false }
mime = { version = "0.3.17", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false, features = ['simd'] }
syntect = { version = "5.0.0", default-features = false, features = ["parsing",  "default-syntaxes"] }
textwrap = { version = "0.16.0", default-features = false, features = ["unicode-linebreak", "unicode-width"] }
thiserror = { version = "1.0.40", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
url = "2.3.1"
yazi-adaptor = {git = "https://github.com/lengyijun/yazi", branch = "pub_more" }

# Optional for svg support
resvg = { version = "0.37.0", optional = true, default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
# Optional for image processing support; we deliberately build with default
# features to include all possible image formats
image = { version = "0.24.6", optional = true }
ratatui = "0.25.0"
crossterm = "0.27.0"
anyhow = "1.0.79"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.11"

[dev-dependencies]
glob = "0.3.1"
similar-asserts = "1.4.2"
syntect = { version = "5.0.0", default-features = false, features = ["default-syntaxes"] }
temp-env = { version = "0.3.4", default-features = false }

mdcat-http-reqwest = { path = "../mdcat-http-reqwest/", features = ["rustls-tls-native-roots"] }

[build-dependencies]
syntect = { version = "5.0.0", default-features = false, features = ["plist-load", "dump-create"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.15", default-features = false, features = ["std", "termios", "system"] }

[target.'cfg(windows)'.dependencies]
terminal_size = "0.3.0"
gethostname = "0.4.3"

[package.metadata.release]
release = true
