[package]
name = "pulldown-cmark-mdcat"
description = "Render pulldown-cmark events to TTY"
readme = "README.md"
documentation = "https://docs.rs/pulldown-cmark-mdcat"
keywords = ["markdown", "less", "cat", "cmark"]
homepage.workspace = true
repository.workspace = true
version.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["svg", "regex-fancy", "image-processing"]
svg = ["dep:resvg"]
image-processing = ["dep:image"]
regex-fancy = ["syntect/regex-fancy"]
onig = ["syntect/regex-onig"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
anstyle = { version = "1.0.7", default-features = false }
mime = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true, features = ["parsing"] }
textwrap = { version = "0.16.1", default-features = false, features = ["unicode-linebreak", "unicode-width"] }
thiserror = { version = "1.0.61", default-features = false }
tracing = { workspace = true }
url = "2.5.2"
gethostname = "0.5.0"

# Optional for svg support
resvg = { version = "0.43.0", optional = true, default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
# Optional for image processing support; we deliberately build with default
# features to include all possible image formats
image = { version = "0.25.1", optional = true }

[dev-dependencies]
glob = "0.3.1"
similar-asserts = { workspace = true }
syntect = { workspace = true, features = ["default-syntaxes"] }
temp-env = { version = "0.3.6", default-features = false }
insta = { workspace = true }
mdcat-http-reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
regex = { version = "1.10.6", default-features = false }

[build-dependencies]
syntect = { workspace = true, features = ["plist-load", "dump-create"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.34", default-features = false, features = ["std", "termios", "system"] }

[target.'cfg(windows)'.dependencies]
terminal_size = "0.3.0"

[package.metadata.release]
release = true
