[package]
name = "pulldown-cmark-tty"
description = "Render markdown documents to TTYs"
homepage = "https://github.com/swsnr/mdcat/tree/main/pulldown-cmark-tty"
readme = "README.md"
documentation = "https://docs.rs/pulldown-cmark-tty"
keywords = ["markdown", "tty"]
categories = ["text-processing"]
repository.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
# Allow using rustls to avoid cross-building openssl, but use the native
# certificate roots for maximum compatibility
rustls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
ansi_term = { version = "0.12.1", default-features = false }
anyhow = { version = "1.0.69", default-features = false, features = ["std"] }
base64 = { version = "0.21.0", default-features = false }
env_proxy = "0.4.1"
gethostname = "0.4.1"
image = "0.24.5"
mime = { version = "0.3.16", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
once_cell = { version = "1.17.0", default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false }
reqwest = { version = "0.11.14", default-features = false, features = ["gzip", "brotli", "blocking"]}
resvg = { version = "0.29.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
syntect = { version = "5.0.0", default-features = false, features = ["parsing"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
url = "2.3.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.139"

[target.'cfg(windows)'.dependencies]
terminal_size = "0.2.3"

[dev-dependencies]
glob = "0.3.1"
hyper = { version = "0.14.24", default-features = false, features = ["server", "http1", "runtime"] }
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
syntect = { version = "5.0.0", default-features = false, features = ["regex-fancy", "default-themes", "default-syntaxes"] }
temp-env = "0.3.1"
tokio = { version =" 1.25", default-features = false, features = ["time"] }
